# RL-adaptive-walking-for-the-jethexa-hexapod-robot

./: .gitignore  Dockerfile  README.md  check_model_keys.py  docker-compose.yml  entrypoint.sh
.cursor/rules/: jethexa-cursor-rules.mdc
jethexa_description/gazebo/: jethexa.gazebo.xacro  jethexa.transmission.xacro
jethexa_description/urdf/: jethexa.urdf.xacro  jethexa_camera.urdf.xacro  jethexa_description.urdf.xacro
jethexa_rl/: CMakeLists.txt  README.md  __init__.py  package.xml
jethexa_rl/config/: jethexa_controllers.yaml
jethexa_rl/launch/: evaluate.launch  gazebo_only.launch  train.launch
jethexa_rl/logs/: cpg_params_log.csv  joint_target_log.csv  robot_position_log.csv  training_metrics.csv
jethexa_rl/scripts/: cpg_controller.py  cpg_service_node.py  debug_env.py  evaluate_model.py  gym_bridge_ros.py  jethexa_gym_env.py  make_executable.sh  reset_world.py  run_training.sh  terrain_generator.py  test_imports.py  train_ppo.py  visualize_trajectory.py
jethexa_rl/scripts/logs/: monitor.csv
jethexa_rl/scripts/logs/PPO_0/: events.out.tfevents.1745101243.parrot.4176.0  events.out.tfevents.1745101690.parrot.1597.0  events.out.tfevents.1745101859.parrot.2243.0
jethexa_rl/srv/: CPGControl.srv  __init__.py
jethexa_rl/worlds/: training.world
