<?xml version="1.0"?>
<package format="2">
  <name>jethexa_rl</name>
  <version>0.0.1</version>
  <description>ROS package for reinforcement learning with JetHexa in Gazebo</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>jethexa_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>